<resources>
    <string name="app_name">WanAndroid</string>

    <string name="common_login">登录</string>
    <string name="common_register">注册</string>

    <string name="login_edit_userName_hint">请输入您的用户名</string>
    <string name="login_edit_password_hint">请输入您的密码</string>
    <string name="login_edit_repassword_hint">请再次输入您的密码</string>
    <string name="login_tv_register_tips">如果您还没有账号,请先注册一个吧ヾ(✿ﾟ▽ﾟ)ノ </string>
    <string name="register_tv_login_tips">有账号了,请直接登录吧ヾ(ﾟ∀ﾟゞ)</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string-array name="home_tab_layout_array">
        <item>首页</item>
        <item>体系</item>
    </string-array>
</resources>
